# robomaster-auto-aim

./: .gitignore  LICENSE  README.md
src/armor_detector/: CMakeLists.txt  package.xml
src/armor_detector/include/armor_detector/: armor_detector_node.hpp  armor_finder.hpp  pnp_solver.hpp  types.hpp  visualizer.hpp
src/armor_detector/launch/: armor_detector.launch.py
src/armor_detector/src/: armor_detector_node.cpp  armor_finder.cpp  main.cpp  pnp_solver.cpp  visualizer.cpp
src/hikvision_ros2_driver/hikvision_ros2_driver/include/hikvision_ros2_driver/: hikvision_ros2_driver.hpp
src/hikvision_ros2_driver/hikvision_ros2_driver/src/: hikvision_ros2_driver.cpp
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/armor_detector/lib/armor_detector/: armor_detector_node
src/install/armor_detector/share/ament_index/resource_index/package_run_dependencies/: armor_detector
src/install/armor_detector/share/ament_index/resource_index/parent_prefix_path/: armor_detector
src/install/armor_detector/share/armor_detector/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/install/armor_detector/share/armor_detector/cmake/: armor_detectorConfig.cmake
src/log/: latest_build
